planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_13_4.jsp
nb_jobs nb_machines optimal
4 4 43 0
Times
1 3 6 7
8 5 10 10
5 4 8 9
3 3 9 10
Machines
3 1 2 4
2 3 1 4
3 4 1 2
2 4 1 3
Starts
0 1 11 17 
1 6 15 23 
3 11 23 33 
0 3 6 16 